# Social-CLIpper

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
configs/: stt.json
configs/encode/: shorts-vertical-fit.json  shorts-vertical.json  youtube-horizontal.json
configs/subtitle_styles/: bold_social.json  minimal.json  purple_lower_third.json
docs/: operator-guide.md
scripts/: smoke_run.sh
social_clipr/: __init__.py  __main__.py  bundle.py  captions.py  cli.py  config_loader.py  ingest.py  job_preset.py  package.py  pipeline.py  render.py  transcribe.py  transcript_resume.py  word_cues.py
tests/: test_captions.py  test_cli.py  test_config_loader.py  test_full_line_coverage.py  test_ingest.py  test_job_preset.py  test_package.py  test_render.py  test_smoke.py  test_sprint4_regression.py  test_transcribe.py  test_transcript_resume.py  test_word_cues.py
